force-app/main/default/objects/Penny_Classroom_Nudge__c/Penny_Classroom_Nudge__c.object-meta.xml
<CustomObject>
    <label>Penny Classroom Nudge</label>
    <nameField>
        <displayFormat>PCN-{0000}</displayFormat>
        <label>Penny Classroom Nudge Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Penny Classroom Nudges</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>