force-app/main/default/objects/Penny_Classroom_Nudge__c/fields/Course_Work_ID__c.field-meta.xml
<CustomField>
    <fullName>Course_Work_ID__c</fullName>
    <label>Course Work ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>