force-app/main/default/objects/Penny_Classroom_Nudge__c/fields/Learner__c.field-meta.xml
<CustomField>
    <fullName>Learner__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Learner</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Penny Classroom Nudges</relationshipLabel>
    <relationshipName>Penny_Classroom_Nudges</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>