force-app/main/default/objects/Penny_Classroom_Nudge__c/fields/Nudge_Date__c.field-meta.xml
<CustomField>
    <fullName>Nudge_Date__c</fullName>
    <label>Nudge Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>